add header styles and images

--- a/index.html
+++ b/index.html
@@ -24,10 +24,39 @@
     <meta property="og:description" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
     <meta property="og:image" content="img/preview.png" />
 
+    <link rel="stylesheet" href="css/style.css">
     <title>Lesson 10 - Group Project</title>
 </head>
 <header>
-
+    <div class="projects-header">
+        <div class="projects-title">
+            <h2>პროექტები</h2>
+            <div class="dots">
+                <span class="white-dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+    </div>
+    <div class="projects">
+        <div class="projects-container">
+            <div class="container a">
+                <img src="img/project-img1.png" alt="Project N1">
+                <p class="absolute">ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში</p>
+            </div>
+            <div class="container b">
+                <img src="img/project-img2.png" alt="Project N2">
+                <p class="absolute">ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში</p>
+            </div>
+            <div class="container c">
+                <img src="img/project-img3.png" alt="Project N3">
+                <p class="absolute">ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში</p>
+            </div>
+        </div>
+        <div class="projects-others">
+            <a href="">| სხვა პროექტები</a>
+        </div>
+    </div>
 </header>
 
 <section>
