--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" content="Lesson 10 - Group Project" />
-    <meta name="keywords" content="HTML, CSS" />
-    <meta name="author" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
-
-    <meta property="og:url" content="https://mmeskhi.github.io/Lesson-10-group/" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Lesson 10 - Group Project" />
-    <meta property="og:description" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
-    <meta property="og:image" content="img/preview.png" />
-
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Meskhi7" />
-    <meta name="twitter:creator" content="@Meskhi7" />
-    <meta property="og:url" content="https://mmeskhi.github.io/Lesson-10-group/" />
-    <meta property="og:title" content="Lesson 10 - Group Project" />
-    <meta property="og:description" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
-    <meta property="og:image" content="img/preview.png" />
-
-    <title>Lesson 10 - Group Project</title>
-</head>
-<header>
-
-</header>
-
-<section>
-
-</section>
-
-<footer>
-
-</footer>
-
-<body>
-
-</body>
-
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section>
+      <div>
+        <div class="flex-box">
+          <h2>პარტნიორები</h2>
+          <div class="dots">
+            <div class="dot"></div>
+            <div class="dot grey-dot"></div>
+            <div class="dot grey-dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="second-flex-box">
+        <div class="text-div">
+          <p>
+            Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+            <a href="#">იგი სტანდარტად 1500-იანი წლებიდან იქცა</a>, როდესაც
+            უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+          </p>
+        </div>
+        <div class="images">
+          <img src="images/Group 66.png" alt="logo" class="first-img" /><img
+            src="images/Rectangle 24.png"
+            alt="logo"
+            class="second-img"
+          /><img
+            src="images/Rectangle 25.png"
+            alt="logo"
+            class="third-img"
+          /><img
+            src="images/Rectangle 28.png"
+            alt="logo"
+            class="fourth-img"
+          /><img
+            src="images/Rectangle 27.png"
+            alt="logo"
+            class="fifth-img"
+          /><img
+            src="images/Rectangle 26.png"
+            alt="logo"
+            class="sixth-img"
+          /><img
+            src="images/Rectangle 31.png"
+            alt="logo"
+            class="seventh-img"
+          /><img
+            src="images/Rectangle 30.png"
+            alt="logo"
+            class="eighth-img"
+          /><img src="images/Rectangle 29.png" alt="logo" class="ninth-img" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
