--- a/index.html
+++ b/index.html
@@ -102,27 +102,23 @@
         </p>
       </div>
       <div class="images">
-        <img src="images/Group 66.png" alt="logo" class="first-img" /><img
-          src="images/Rectangle 24.png"
+        <img src="img/Group 66.png" alt="logo" class="first-img" /><img
+          src="img/Rectangle 24.png"
           alt="logo"
           class="second-img"
-        /><img src="images/Rectangle 25.png" alt="logo" class="third-img" /><img
-          src="images/Rectangle 28.png"
+        /><img src="img/Rectangle 25.png" alt="logo" class="third-img" /><img
+          src="img/Rectangle 28.png"
           alt="logo"
           class="fourth-img"
-        /><img src="images/Rectangle 27.png" alt="logo" class="fifth-img" /><img
-          src="images/Rectangle 26.png"
+        /><img src="img/Rectangle 27.png" alt="logo" class="fifth-img" /><img
+          src="img/Rectangle 26.png"
           alt="logo"
           class="sixth-img"
-        /><img
-          src="images/Rectangle 31.png"
-          alt="logo"
-          class="seventh-img"
-        /><img
-          src="images/Rectangle 30.png"
+        /><img src="img/Rectangle 31.png" alt="logo" class="seventh-img" /><img
+          src="img/Rectangle 30.png"
           alt="logo"
           class="eighth-img"
-        /><img src="images/Rectangle 29.png" alt="logo" class="ninth-img" />
+        /><img src="img/Rectangle 29.png" alt="logo" class="ninth-img" />
       </div>
     </div>
   </section>
