--- a/index.html
+++ b/index.html
@@ -102,32 +102,81 @@
         </p>
       </div>
       <div class="images">
-        <img src="images/Group 66.png" alt="logo" class="first-img" /><img
-          src="images/Rectangle 24.png"
+        <img src="img/Group 66.png" alt="logo" class="first-img" /><img
+          src="img/Rectangle 24.png"
           alt="logo"
           class="second-img"
-        /><img src="images/Rectangle 25.png" alt="logo" class="third-img" /><img
-          src="images/Rectangle 28.png"
+        /><img src="img/Rectangle 25.png" alt="logo" class="third-img" /><img
+          src="img/Rectangle 28.png"
           alt="logo"
           class="fourth-img"
-        /><img src="images/Rectangle 27.png" alt="logo" class="fifth-img" /><img
-          src="images/Rectangle 26.png"
+        /><img src="img/Rectangle 27.png" alt="logo" class="fifth-img" /><img
+          src="img/Rectangle 26.png"
           alt="logo"
           class="sixth-img"
         /><img
-          src="images/Rectangle 31.png"
+          src="img/Rectangle 31.png"
           alt="logo"
           class="seventh-img"
         /><img
-          src="images/Rectangle 30.png"
+          src="img/Rectangle 30.png"
           alt="logo"
           class="eighth-img"
-        /><img src="images/Rectangle 29.png" alt="logo" class="ninth-img" />
+        /><img src="img/Rectangle 29.png" alt="logo" class="ninth-img" />
       </div>
     </div>
   </section>
 
-  <footer></footer>
+  
 
-  <body></body>
+  <body>
+    <footer>
+      <div class="projects-footer">
+        <div class="footer-title">
+          <h2>კონტაქტი</h2>
+          <div class="text-footer">
+          <p>Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. 
+            იგი სტანდარტად 1500-იანი წლებიდან იქცა,
+             როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.</p>
+             <div class="Map">
+               <img src="img/Rectangle 47.png" alt="logo">
+             </div>
+           <div class="forms">
+             <form action="" method="">
+               <div class="form-fields">
+                 <input
+                 type="text"
+                 id="saxeli gvari"
+                 placeholder="სახელი,გვარი"
+                 />
+                 <div class="form-fields">
+                   <input type="text" 
+                          id="el-posta"
+                          placeholder="ელ-ფოსტა" />
+                          <div class="form-fields">
+                            <input type="text" 
+                                   id="telefoni"
+                                   placeholder="ტელეფონის ნომერი" />
+                                   <div class="form-fields">
+                                    <input type="text" 
+                                           id="Shetkobineba"
+                                           placeholder="შეტყობინება" />
+                 </div>
+               </div>
+             </form>
+           </div>
+        </div>
+        </div>
+      <div class="call">
+        <img src="img/Rectangle 59.svg" alt="logo">
+        <span class="number">+995 555 444 333</span>
+      </div>
+        <div class="mail">
+          <img src="img/Rectangle 64.svg" alt="logo">
+          <span class="mail">Example@gmail.com</span>
+        </div>
+      </div>
+      </div>
+    </footer>
+  </body>
 </html>
