--- a/index.html
+++ b/index.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Lesson 10 - Group Project" />
-    <meta name="keywords" content="HTML, CSS" />
-    <meta
-      name="author"
-      content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
-      property="og:url"
-      content="https://mmeskhi.github.io/Lesson-10-group/"
-    />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Lesson 10 - Group Project" />
-    <meta
-      property="og:description"
-      content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze"
-    />
-    <meta property="og:image" content="img/preview.png" />
+  <meta name="description" content="Lesson 10 - Group Project" />
+  <meta name="keywords" content="HTML, CSS" />
+  <meta name="author" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Meskhi7" />
-    <meta name="twitter:creator" content="@Meskhi7" />
-    <meta
-      property="og:url"
-      content="https://mmeskhi.github.io/Lesson-10-group/"
-    />
-    <meta property="og:title" content="Lesson 10 - Group Project" />
-    <meta
-      property="og:description"
-      content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze"
-    />
-    <meta property="og:image" content="img/preview.png" />
+  <meta property="og:url" content="https://mmeskhi.github.io/Lesson-10-group/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Lesson 10 - Group Project" />
+  <meta property="og:description" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
+  <meta property="og:image" content="img/preview.png" />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Lesson 10 - Group Project</title>
-  </head>
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@Meskhi7" />
+  <meta name="twitter:creator" content="@Meskhi7" />
+  <meta property="og:url" content="https://mmeskhi.github.io/Lesson-10-group/" />
+  <meta property="og:title" content="Lesson 10 - Group Project" />
+  <meta property="og:description" content="Mikheil Meskhi, Luka Baliashvili, Saba Giorgadze" />
+  <meta property="og:image" content="img/preview.png" />
+
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Lesson 10 - Group Project</title>
+</head>
+
+<body>
   <header>
     <div class="projects-header">
       <div class="projects-title">
@@ -83,14 +71,12 @@
   </header>
 
   <section>
-    <div>
-      <div class="flex-box">
-        <h2>პარტნიორები</h2>
-        <div class="dots">
-          <div class="dot"></div>
-          <div class="dot grey-dot"></div>
-          <div class="dot grey-dot"></div>
-        </div>
+    <div class="flex-box">
+      <h2>პარტნიორები</h2>
+      <div class="dots">
+        <div class="blue-dot"></div>
+        <div class="dot2"></div>
+        <div class="dot2"></div>
       </div>
     </div>
     <div class="second-flex-box">
@@ -102,81 +88,59 @@
         </p>
       </div>
       <div class="images">
-        <img src="img/Group 66.png" alt="logo" class="first-img" /><img
-          src="img/Rectangle 24.png"
-          alt="logo"
-          class="second-img"
-        /><img src="img/Rectangle 25.png" alt="logo" class="third-img" /><img
-          src="img/Rectangle 28.png"
-          alt="logo"
-          class="fourth-img"
-        /><img src="img/Rectangle 27.png" alt="logo" class="fifth-img" /><img
-          src="img/Rectangle 26.png"
-          alt="logo"
-          class="sixth-img"
-        /><img
-          src="img/Rectangle 31.png"
-          alt="logo"
-          class="seventh-img"
-        /><img
-          src="img/Rectangle 30.png"
-          alt="logo"
-          class="eighth-img"
-        /><img src="img/Rectangle 29.png" alt="logo" class="ninth-img" />
+        <img src="img/Group 66.png" alt="logo" class="first-img" /><img src="img/Rectangle 24.png" alt="logo"
+          class="second-img" /><img src="img/Rectangle 25.png" alt="logo" class="third-img" /><img
+          src="img/Rectangle 28.png" alt="logo" class="fourth-img" /><img src="img/Rectangle 27.png" alt="logo"
+          class="fifth-img" /><img src="img/Rectangle 26.png" alt="logo" class="sixth-img" /><img
+          src="img/Rectangle 31.png" alt="logo" class="seventh-img" /><img src="img/Rectangle 30.png" alt="logo"
+          class="eighth-img" /><img src="img/Rectangle 29.png" alt="logo" class="ninth-img" />
       </div>
     </div>
   </section>
 
-  
-
-  <body>
-    <footer>
-      <div class="projects-footer">
-        <div class="footer-title">
-          <h2>კონტაქტი</h2>
-          <div class="text-footer">
-          <p>Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. 
+  <footer>
+    <div class="projects-footer">
+      <div class="footer-title">
+        <h2>კონტაქტი</h2>
+        <div class="text-footer">
+          <p>Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
             იგი სტანდარტად 1500-იანი წლებიდან იქცა,
-             როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.</p>
-             <div class="Map">
-               <img src="img/Rectangle 47.png" alt="logo">
-             </div>
-           <div class="forms">
-             <form action="" method="">
-               <div class="form-fields">
-                 <input
-                 type="text"
-                 id="saxeli gvari"
-                 placeholder="სახელი,გვარი"
-                 />
-                 <div class="form-fields">
-                   <input type="text" 
-                          id="el-posta"
-                          placeholder="ელ-ფოსტა" />
-                          <div class="form-fields">
-                            <input type="text" 
-                                   id="telefoni"
-                                   placeholder="ტელეფონის ნომერი" />
-                                   <div class="form-fields">
-                                    <input type="text" 
-                                           id="Shetkobineba"
-                                           placeholder="შეტყობინება" />
-                 </div>
-               </div>
-             </form>
-           </div>
+            როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.</p>
+          <div class="Map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2977.8837553565545!2d44.78761431537367!3d41.723027179234755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ska!2sge!4v1651914778294!5m2!1ska!2sge"
+              width="463" height="200" style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="forms">
+            <form action="" method="">
+              <div class="form-fields">
+                <input type="text" id="saxeli gvari" placeholder="სახელი,გვარი" />
+                <div class="form-fields">
+                  <input type="text" id="el-posta" placeholder="ელ-ფოსტა" />
+                  <div class="form-fields">
+                    <input type="text" id="telefoni" placeholder="ტელეფონის ნომერი" />
+                    <div class="form-fields">
+                      <input type="text" id="Shetkobineba" placeholder="შეტყობინება" />
+                    </div>
+                  </div>
+            </form>
+          </div>
         </div>
-        </div>
-      <div class="call">
-        <img src="img/Rectangle 59.svg" alt="logo">
-        <span class="number">+995 555 444 333</span>
       </div>
+      <div class="footer-contact">
+        <div class="call">
+          <img src="img/Rectangle 59.svg" alt="logo">
+          <span class="number">+995 555 444 333</span>
+        </div>
         <div class="mail">
           <img src="img/Rectangle 64.svg" alt="logo">
           <span class="mail">Example@gmail.com</span>
         </div>
       </div>
-      </div>
-    </footer>
-  </body>
+    </div>
+    </div>
+  </footer>
+</body>
+
 </html>
